# media-factory-engine

./: .gitignore  README.md  pyproject.toml
media_factory/: __init__.py  aggregate.py  cli.py  dialogue.py  feed.py  generate.py  pipeline.py  tts.py
tests/: test_smoke.py
