[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-factory"
version = "0.1.1"
description = "Engine partagé pour les podcasts/revues audio générés automatiquement (Presto, LE BUZZER, etc.)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "meerkly-00" }
]
keywords = ["podcast", "tts", "rss", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "feedparser>=6.0.11",
    "trafilatura>=1.12.0",
    "edge-tts>=6.1.12",
    "mutagen>=1.47.0",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "lxml>=5.3.0",
    "lxml-html-clean>=0.4.0",
    "num2words>=0.5.13",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
tools = [
    "tweepy>=4.14.0",
    "google-api-python-client>=2.160.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
media-factory = "media_factory.cli:run_from_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["media_factory*"]
exclude = ["tests*"]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-factory"
version = "0.1.1"
description = "Engine partagé pour les podcasts/revues audio générés automatiquement (Presto, LE BUZZER, etc.)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "meerkly-00" }
]
keywords = ["podcast", "tts", "rss", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "feedparser>=6.0.11",
    "trafilatura>=1.12.0",
    "edge-tts>=6.1.12",
    "mutagen>=1.47.0",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "lxml>=5.3.0",
    "lxml-html-clean>=0.4.0",
    "num2words>=0.5.13",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
tools = [
    "tweepy>=4.14.0",
    "google-api-python-client>=2.160.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
media-factory = "media_factory.cli:run_from_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["media_factory*"]
exclude = ["tests*"]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-factory"
version = "0.1.0"
description = "Engine partagé pour les podcasts/revues audio générés automatiquement (Presto, LE BUZZER, etc.)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "meerkly-00" }
]
keywords = ["podcast", "tts", "rss", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "feedparser>=6.0.11",
    "trafilatura>=1.12.0",
    "edge-tts>=6.1.12",
    "mutagen>=1.47.0",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "lxml>=5.3.0",
    "num2words>=0.5.13",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
tools = [
    "tweepy>=4.14.0",
    "google-api-python-client>=2.160.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
media-factory = "media_factory.cli:run_from_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["media_factory*"]
exclude = ["tests*"]
